# ws_gateway

./: .gitignore  Cargo.toml  README.md  dev.sh
.cargo/: config.toml
.github/workflows/: build.yml
client_sdk/js/: gateway_protocol.js
client_sdk/python/: gateway_protocol.py
doc/: multi_agent_orchestration.md  rust_gateway_prd_v3.md
doc/gateway-protocol/: Cargo.toml  protocol.md
doc/gateway-protocol/src/: lib.rs
examples/: stress.rs
gateway/: Cargo.toml
gateway/public/: index.html
gateway/src/: lib.rs  main.rs  network.rs  observability.rs
public/: chat.html  gateway_protocol.js  index.html
scripts/: build.sh
src/: main.rs  network.rs  observability.rs  routing.rs  static_files.rs
tests/: integration_test.rs
